feat: implement database store for valid purchases

--- a/deno.json
+++ b/deno.json
@@ -2,10 +2,11 @@
   "tasks": {
     "dev": "vite",
     "build": "vite build",
-    "server:start": "deno run --env-file --allow-env --allow-net --allow-read  src/back/main.ts",
+    "server:start": "deno run --env-file --allow-env --allow-net --allow-read --allow-write --allow-ffi src/back/main.ts",
     "serve": "deno task build && deno task server:start"
   },
   "imports": {
+    "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.2",
     "@square/web-sdk": "npm:@square/web-sdk@^2.0.1",
     "@std/http": "jsr:@std/http@^1.0.12",
